Curve Calibration: Added a test with 2 curves. corrected minor bugs.